tests/neg-inline-trait/disallow-inline-value-trait.scala
inline trait Foo extends AnyVal // error: cannot extend AnyVal
